# python-template

./: .flake8  CHANGELOG.md  LICENSE  README.md  noxfile.py  prepeare-release.sh  pyproject.toml  setup.py
.github/: changed_files_spec.yml
.github/workflows/: cicd.yml  commit-lint.yml  deploy_prod.yml  release copy.yml  release.yml  verify_upstream.sh
src/python_template/: console.py  wikipedia.py
tests/: conftest.py  console_test.py  wikipedia_test.py
